* Prevent feedback messages from creating a gap between menu and content. (profile.css) [Bug 2893]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@7841 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/profile.css
+++ b/Themes/default/css/profile.css
@@ -124,9 +124,9 @@
 /* Simple feedback messages */
 div#profile_error, div#profile_success
 {
-	margin-bottom: 0.5em;
 	padding: 1ex 2ex;
-	border: 1px solid;
+	border: solid;
+	border-width: 1px 1px 0 1px;
 }
 
 div#profile_error
